AUTOMAKE_OPTIONS = foreign

noinst_PROGRAMS =

AM_CPPFLAGS=-I$(top_srcdir)/libcommons
LIBS= 

#simplest_SOURCES = ulibpcap.c fpcap.c
#simplest_CPPFLAGS = -I/usr/include/pcap -I$(top_srcdir)/libcommons
#simplest_LDADD = $(top_srcdir)/libcommons/libmauto.a -lpcap
#simplest_LDFLAGS = -lpcap
#simplest_LDFLAGS = -static

#EXTRA_DIST = *.h
